--- a/package.json
+++ b/package.json
@@ -1,15 +1,8 @@
 {
-  "name": "volume-exemplo",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ."
-  },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.15.3"
+    "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
