--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ build/Release
 # Dependency directories
 node_modules/
 web/node_modules
+mobile/node_modules
 jspm_packages/
 
 # TypeScript v1 declaration files
